# project-vanet-blockchain

./: .gitignore  CMakeLists.txt  README.md  TEST-SMART-CONTRACT.MD  truffle-config.js
Iroha_app/: application.py  commons.py  integration_helpers.py  main.py  test.py
Iroha_app/key/: dat3@test.priv  dat4@test.priv  dat4@test.pub  dat5@test.priv  dat5@test.pub  dat@test.priv  dat@test.pub
client/: .gitignore  README.md  package-lock.json  package.json
client/src/: App.js  account.json
client/src/contracts/: CoinReceiver.json  Migrations.json  RideShare.json
client/src/py/: account.py  application.py  create_account.py  createaccount.py  integration_helpers.py  main.py  register.py
client/src/py/key/: dat1@test.priv  dat1@test.pub  dat2@test.priv  dat2@test.pub  dat3@test.pub
contracts/: CoinReceiver.sol  Migrations.sol  RideShare.sol
data/: vehicle.json
iroha/: CMakeLists.txt  test.txt
iroha/cmake/: README.md  dependencies.cmake  functions.cmake
iroha/example/: config1.sample
iroha/goSrc/src/vmCaller/: CMakeLists.txt  go.mod  go.mod.in
iroha/iroha-cli/: CMakeLists.txt
iroha/iroha-cli/interactive/impl/: interactive_query_cli.cpp
migrations/: 1_migration.js  1_rideshare.js  3_coinreceiver.js
rideshare/: package-lock.json  package.json
rideshare-contract/: README.md  env  hardhat.config.ts  package-lock.json  package.json
rideshare-contract/contracts/: RideShare.sol  Token.sol
rideshare-contract/ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
rideshare-contract/ignition/deployments/chain-11155111/artifacts/: TokenModule#Token.dbg.json  TokenModule#Token.json
rideshare-contract/ignition/modules/: Rideshare.ts  Token.ts
rideshare-contract/test/: Token.ts
rideshare/src/: App.js  index.js
rideshare/src/component/: Contact.js  CreateRequest.js  Home.js  News.js  RideInfor.js  api.js
rideshare/src/contracts/: RideShare.json
simulation/data/: TN1_data_v1_20.csv  TN1_data_v2_20.csv  Tổng hợp.xlsx  data.csv  data_statistic.csv  data_statistic_100.csv  data_statistic_101.csv  data_statistic_102.csv  data_statistic_104.csv  data_statistic_105.csv  data_statistic_106.csv  data_statistic_107.csv  data_statistic_108.csv  data_statistic_110.csv  data_statistic_192.csv  data_statistic_193.csv  data_statistic_194.csv  data_statistic_195.csv  data_statistic_199.csv  data_statistic_200.csv  data_statistic_202.csv  data_statistic_204.csv  data_statistic_205.csv  data_statistic_206.csv  data_statistic_207.csv  data_statistic_208.csv  data_statistic_209.csv  data_statistic_291.csv  data_statistic_292.csv  data_statistic_297.csv  data_statistic_298.csv  data_statistic_300.csv  data_statistic_301.csv  data_statistic_304.csv  data_statistic_305.csv  data_statistic_307.csv  data_statistic_391.csv  data_statistic_395.csv  data_statistic_397.csv  data_statistic_400.csv  (+274 more)
simulation/data/Before_5_December_2023/: data_v1_100.csv  data_v1_101.csv  data_v1_102.csv  data_v1_103.csv  data_v1_104.csv  data_v1_191.csv  data_v1_192.csv  data_v1_193.csv  data_v1_194.csv  data_v1_196.csv  data_v1_198.csv  data_v1_199.csv  data_v1_201.csv  data_v1_202.csv  data_v1_203.csv  data_v1_204.csv  data_v1_206.csv  data_v1_207.csv  data_v1_208.csv  data_v1_210.csv  data_v1_291.csv  data_v1_292.csv  data_v1_293.csv  data_v1_294.csv  data_v1_297.csv  data_v1_298.csv  data_v1_301.csv  data_v1_302.csv  data_v1_304.csv  data_v1_307.csv  data_v1_390.csv  data_v1_391.csv  data_v1_392.csv  data_v1_394.csv  data_v1_396.csv  data_v1_397.csv  data_v1_398.csv  data_v1_400.csv  data_v1_401.csv  data_v1_404.csv  (+102 more)
simulation/data/Result_accumulate_distance/: data_v3_20.csv  data_v4_20.csv
simulation/data/Result_coin_average_algorithm/: data_v1_20_30000.csv  data_v1_20_coin_ave.csv  data_v1_scenario.json  data_v1_scenario100_2000.json  data_v1_scenario1_2000.json  data_v1_scenario2_2000.json  data_v1_scenario3_2000.json
simulation/data/Result_consider_time/: data_v1_3_20.json  data_v5_20.csv  data_v6_20.csv  data_v8_20.csv  data_v9_20.csv  percentage_winner_v9_20.csv
simulation/data/Result_distance_average_algorithm/: data_v2_20_25000.csv  data_v2_20_35000.csv  data_v2_20_dis_ave.csv
simulation/data/Result_problem_statement/: data_v1_3_20_0.1AverageDistance.json  data_v1_3_20_0.1AverageDistance_Not_Parse_Int.json  data_v1_3_20_1000.json  data_v1_3_20_10000.json  data_v1_3_20_20000.json  data_v1_3_20_30000.json  data_v1_3_20_40000.json
simulation/data/Result_statistic_distance/: data_distance_20.csv  data_v10_20.json  data_v11_20.json
simulation/experiment/: day2_route100.rou.xml  generate_route_file.py  generate_vehicle.py  lethanhnghi.osm  log  net.net.xml  py_draw_result_comparision.py  simulation100.sumo.cfg  v2.1.json  v4.6_hash_distance_average.json  v4_proposal_algorithm.py
simulation/script/: JSAddHeader.js  JSAddHeader_v1.js  JSAddHeader_v2.js  JSAddHeader_v3.js  JSCalculateDistance.js  JSHTest.js  JSMinerCoin.js  JSMinerCoin_v1.js  JSMinerCoin_v2.js  JSMinerCoin_v3.js  JSMinerLargeFile.js  JSMinerLargeFile_v1.js  JSMinerLargeFile_v2.js  JSMinerLargeFile_v3.js  JSMinerLargeFile_v4.js  JSMinerLargeFile_v5.js  JSMinerLargeFile_v6.js  JSMinerLargeFile_v7.js  JSMinerLargeFile_v8.js  JSTest.js  JSTestReadFile.js  MinerCoin.js  README.md  command.py  convert_data.py  distance.py  draw_image_0.py  generare_route_file.py  generate_trip.py  handle_data.py  init_simulation.py  init_vehicle.py  main.py  miner_coin.py  my_routes.add.xml  new_routes.rou.xml  new_routes1.rou.xml  py.py  py_add_header.py  py_add_header_distance.py  (+49 more)
simulation/sumo/: net.json  road-side.poly.xml  route.json  route.rou.xml  simulation.sumo.cfg  simulation1000_250.sumo.cfg
test/: CalculationCoin.js  TestCoinReceiver.js  TestRideShare.js
